[gd_scene load_steps=9 format=3 uid="uid://cxcbq07tnykve"]

[ext_resource type="Script" uid="uid://clj1csnhqtyyl" path="res://Scripts/test_runner.gd" id="1_xi1o3"]
[ext_resource type="Texture2D" uid="uid://cbwbvoswrovsv" path="res://icon.svg" id="2_e3pej"]
[ext_resource type="AudioStream" uid="uid://cds6x7xvf51fy" path="res://Music/PlayerSounds/man-death-scream-186763.mp3" id="3_ka0d4"]
[ext_resource type="AudioStream" uid="uid://vim74opivihl" path="res://Music/MonsterSounds/horror-thriller-action-247745-[AudioTrimmer.com].mp3" id="4_gssux"]
[ext_resource type="AudioStream" uid="uid://b08mu5svtuvhg" path="res://Music/PlayerSounds/heartbeat-tense-377250.mp3" id="4_joha4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ka0d4"]
size = Vector2(38, 38)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka0d4"]
bg_color = Color(0.750769, 0.131297, 0.228087, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="CircleShape2D" id="CircleShape2D_ka0d4"]
radius = 220.0

[node name="TestRunner" type="CharacterBody2D"]
script = ExtResource("1_xi1o3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_e3pej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ka0d4")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ka0d4")

[node name="MonsterRadius" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gssux")
parameters/looping = true

[node name="TakeDmg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_joha4")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -19.0
offset_top = -23.0
offset_right = 19.0
offset_bottom = -19.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ka0d4")
max_value = 12.0
step = 3.0
value = 12.0
show_percentage = false

[node name="MonsterDetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterDetectRadius"]
shape = SubResource("CircleShape2D_ka0d4")

[connection signal="body_entered" from="MonsterDetectRadius" to="." method="_on_monster_detect_radius_body_entered"]
[connection signal="body_exited" from="MonsterDetectRadius" to="." method="_on_monster_detect_radius_body_exited"]
